fixing the alignment of "x" mark when there is image

--- a/docroot/themes/custom/ucsf/scss/libraries/ucsf_locations_map.scss
+++ b/docroot/themes/custom/ucsf/scss/libraries/ucsf_locations_map.scss
@@ -311,6 +311,10 @@ $map-height-max-nav: calc(100vh - 64px);
     }
   }
 
+  .gm-style-iw-ch {
+    padding-top: 0;
+  }
+
   // Infobox close button
   .gm-ui-hover-effect {
     position: absolute !important;
